--- a/src/main/webapp/WEB-INF/views/common/navigation.jspf
+++ b/src/main/webapp/WEB-INF/views/common/navigation.jspf
@@ -4,11 +4,11 @@
 	</div>
 	<div class="navbar-collapse">
 		<ul class="nav navbar-nav">
-			<li><a href="/">Home</a></li>
-			<li class="active"><a href="/list-todos">Todos</a></li>
+			<li><a href="${pageContext.request.contextPath}/">Home</a></li>
+			<li class="active"><a href="${pageContext.request.contextPath}/list-todos">Todos</a></li>
 		</ul>
 		<ul class="nav navbar-nav navbar-right">
-			<li><a href="/logout">Logout</a></li>
+			<li><a href="${pageContext.request.contextPath}/logout">Logout</a></li>
 		</ul>
 	</div>
 </nav>
